Push End of the day

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,14 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a = 3"
+    "<img src=\"https://www.python.org/static/community_logos/python-logo-master-v3-TM-flattened.png\" alt=\"Alt text that describes the graphic\" title=\"Title text\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCICE 1)"
+    "# <font color='red'>15 / 09 / 2020</font> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='blue'>EXERCICE 1.1</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme permettant d'échanger les valeurs de deux variables A et B."
    ]
   },
   {
@@ -42,7 +56,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCICE 2)"
+    "## <font color='blue'> EXERCICE 1.2 </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un programme qui demande un nombre à l'utilisateur, puis qui calcule et affiche le carré de ce nombre."
    ]
   },
   {
@@ -69,7 +90,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCICE 3)"
+    "## <font color='blue'> EXERCICE 1.3</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme qui demande un nombre à l'utilisateur et l'informe ensuite si ce nombre est positif ou négatif ( *on laisse de côté le cas où le nombre vaut zéro* )."
    ]
   },
   {
@@ -100,7 +128,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCICE 4"
+    "## <font color='blue'>EXERCICE 1.4</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme qui demande deux nombres à l'utilisateur et l'informe ensuite si leurs produit est négatif ou positif ( *on laisse de côté le cas où le produit est nul* ).\n",
+    "\n",
+    "### Attention toute fois : on ne doit pas calculer le produit de ces deux nombres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "positif\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = int(input())\n",
+    "B = int(input())\n",
+    "\n",
+    "if A * B >= 0 :\n",
+    "    print(\"positif\")\n",
+    "else :\n",
+    "    print(\"Negatif\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='blue'>EXERCICE 1.5</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme qui demande un nombre de départ et qui ensuite, affiche les dix nombres sauivants.\n",
+    "### Par exemple, si l'utilisateur entre le nombre 17, le programme affichera les nombres 18 à 27."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = int(input())\n",
+    "B = A + 10\n",
+    "\n",
+    "while A < B :\n",
+    "    A += 1\n",
+    "    print(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
