--- a/Python.ipynb
+++ b/Python.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mickael Lemieux"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <font color='red'>15 / 09 / 2020</font> "
    ]
   },
@@ -30,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -142,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "5\n",
+      "12\n",
+      "12\n",
       "positif\n"
      ]
     }
@@ -182,48 +196,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n"
+      "5\n",
+      "La 1 itération est : 6\n",
+      "La 2 itération est : 7\n",
+      "La 3 itération est : 8\n",
+      "La 4 itération est : 9\n",
+      "La 5 itération est : 10\n",
+      "La 6 itération est : 11\n",
+      "La 7 itération est : 12\n",
+      "La 8 itération est : 13\n",
+      "La 9 itération est : 14\n",
+      "La 10 itération est : 15\n"
      ]
     }
    ],
    "source": [
     "A = int(input())\n",
     "B = A + 10\n",
-    "\n",
+    "it = 0\n",
     "while A < B :\n",
     "    A += 1\n",
-    "    print(A)"
+    "    it += 1\n",
+    "    print(\"La {} itération est : {}\".format(it ,A))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
+    "## <font color='blue'>EXERCICE 1.6</font>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
+    "### Ecrire un algorithme qui demande un nombre de départ et qui calcule la somme des entiers jusqu'à ce nombre.\n",
+    "### Par exemple, si l'on entre 5, le programme doit calculer : 1 + 2 + 3 + 4 + 5 = 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "Le resultat est : 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = int(input())\n",
+    "sum = int(0)\n",
+    "\n",
+    "while A > 0 :\n",
+    "    sum += A\n",
+    "    A -= 1;\n",
+    "print(\"Le resultat est : {}\".format(sum))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='blue'>EXERCICE 2.1</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme calculant la somme des valeurs d'un tableau ( on suppose bien sur que le tableau a été préalablement saisi )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Somme de la liste : 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "sum = 0\n",
+    "cmp = 0\n",
+    "\n",
+    "while len(liste) > cmp :\n",
+    "    sum += liste[cmp]\n",
+    "    cmp += 1\n",
+    "\n",
+    "print(\"Somme de la liste : {}\".format(sum))"
    ]
   },
   {
@@ -251,6 +330,55 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "615.85px",
+    "left": "1670px",
+    "right": "20px",
+    "top": "120px",
+    "width": "350px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": true
   }
  },
  "nbformat": 4,
