--- a/Python.ipynb
+++ b/Python.ipynb
@@ -306,6 +306,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='blue'>EXERCICE 2.2</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme constituant un tableau, à partir de deux tableaux de même longueur préalablement saisis. Le nouveau tableau sera la somme des éléments des deux tableaux de départ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste1 = [1, 2, 3]\n",
+    "liste2 = [4, 5, 6]\n",
+    "liste3 = []\n",
+    "cmp = 0\n",
+    "\n",
+    "while (len(liste1) > cmp) :\n",
+    "    liste3.append(liste1[cmp] + liste2[cmp])\n",
+    "    cmp +=1\n",
+    "    \n",
+    "print(liste3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='blue'>EXERCICE 2.3</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Toujours à partir de deux tableaux précédemment saisis, écrire un algorithme qui calcule le 'FacProduct' de deux tableaux. Pour calculer le 'FacProduct', il faut multiplier chaque éléments du tableau 1 par chaques éléments du tableau2 et additionner le tout."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste1 = [1, 2, 3, 5, 5, 5]\n",
+    "liste2 = [1, 2, 3]\n",
+    "cmp = 0\n",
+    "sum = 0\n",
+    "\n",
+    "while ((len(liste1) > cmp) and (len(liste2) > cmp)) :\n",
+    "    sum += (liste1[cmp] * liste2[cmp])\n",
+    "    cmp += 1\n",
+    "\n",
+    "\n",
+    "if (len(liste1) == cmp and len(liste2) > cmp) :\n",
+    "    while (len(liste2) > cmp) :\n",
+    "        sum += liste2[cmp]\n",
+    "        cmp += 1\n",
+    "    print(sum)\n",
+    "    \n",
+    "elif (len(liste2) == cmp and len(liste1) > cmp) :\n",
+    "    while (len(liste1) > cmp) :\n",
+    "        sum += liste1[cmp]\n",
+    "        cmp += 1\n",
+    "    print(sum)\n",
+    "    \n",
+    "else :\n",
+    "    print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='blue'>EXERCICE 2.4</font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
