--- a/Python.ipynb
+++ b/Python.ipynb
@@ -361,17 +361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "liste1 = [1, 2, 3, 5, 5, 5]\n",
     "liste2 = [1, 2, 3]\n",
@@ -404,6 +396,71 @@
    "metadata": {},
    "source": [
     "## <font color='blue'>EXERCICE 2.4</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ecrire un algorithme permettant à l'utilisateur de saisir un nombre déterminé de valeurs. Le programme, une fois la saisie terminée, renvoie la plus grande valeur en précisant quelle position elle occupe dans le tableau."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrez les valeurs\n",
+      "entrez le premier nombre : 4\n",
+      "entrez le deuxième nombre : 9\n",
+      "entrez le troisième nombre : 7\n",
+      "entrez le quatrième nombre : 20\n",
+      "entrez le cinquième nombre : 12\n",
+      "Le nombre le plus élevé est : 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Entrez les valeurs\")\n",
+    "liste = []\n",
+    "FirstInput = int(input(\"entrez le premier nombre : \"))\n",
+    "liste.append(FirstInput)\n",
+    "SecondInput = int(input(\"entrez le deuxième nombre : \"))\n",
+    "liste.append(SecondInput)\n",
+    "ThirdInput = int(input(\"entrez le troisième nombre : \"))\n",
+    "liste.append(ThirdInput)\n",
+    "FourthInput = int(input(\"entrez le quatrième nombre : \"))\n",
+    "liste.append(FourthInput)\n",
+    "FifthInput = int(input(\"entrez le cinquième nombre : \"))\n",
+    "liste.append(FifthInput)\n",
+    "\n",
+    "cmp = 0\n",
+    "result = 0\n",
+    "\n",
+    "while (len(liste) > cmp) :\n",
+    "    if (liste[cmp] > result) :\n",
+    "        result = liste[cmp]\n",
+    "    cmp += 1\n",
+    "    \n",
+    "print(\"Le nombre le plus élevé est : {}\".format(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -466,10 +523,10 @@
     }
    },
    "position": {
-    "height": "615.85px",
-    "left": "1670px",
+    "height": "475.35px",
+    "left": "1638px",
     "right": "20px",
-    "top": "120px",
+    "top": "124px",
     "width": "350px"
    },
    "types_to_exclude": [
