--- a/Python.ipynb
+++ b/Python.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 1.1</font>"
+    "## EXERCICE 1.1"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'> EXERCICE 1.2 </font>"
+    "## EXERCICE 1.2 "
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'> EXERCICE 1.3</font>"
+    "##  EXERCICE 1.3"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 1.4</font>"
+    "## EXERCICE 1.4"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 1.5</font>"
+    "## EXERCICE 1.5"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 1.6</font>"
+    "## EXERCICE 1.6"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 2.1</font>"
+    "## EXERCICE 2.1"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 2.2</font>"
+    "## EXERCICE 2.2"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 2.3</font>"
+    "## EXERCICE 2.3"
    ]
   },
   {
@@ -361,41 +361,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "liste1 = [1, 2, 3, 5, 5, 5]\n",
-    "liste2 = [1, 2, 3]\n",
-    "cmp = 0\n",
-    "sum = 0\n",
-    "\n",
-    "while ((len(liste1) > cmp) and (len(liste2) > cmp)) :\n",
-    "    sum += (liste1[cmp] * liste2[cmp])\n",
-    "    cmp += 1\n",
-    "\n",
-    "\n",
-    "if (len(liste1) == cmp and len(liste2) > cmp) :\n",
-    "    while (len(liste2) > cmp) :\n",
-    "        sum += liste2[cmp]\n",
-    "        cmp += 1\n",
-    "    print(sum)\n",
+    "def fact_prod(liste1 : list, liste2 : list) -> float : \n",
     "    \n",
-    "elif (len(liste2) == cmp and len(liste1) > cmp) :\n",
-    "    while (len(liste1) > cmp) :\n",
-    "        sum += liste1[cmp]\n",
+    "    cmp = 0\n",
+    "    sum = 0\n",
+    "\n",
+    "    while ((len(liste1) > cmp) and (len(liste2) > cmp)) :\n",
+    "        sum += (liste1[cmp] * liste2[cmp])\n",
     "        cmp += 1\n",
-    "    print(sum)\n",
-    "    \n",
-    "else :\n",
-    "    print(sum)"
+    "\n",
+    "\n",
+    "    if (len(liste1) == cmp and len(liste2) > cmp) :\n",
+    "        while (len(liste2) > cmp) :\n",
+    "            sum += liste2[cmp]\n",
+    "            cmp += 1\n",
+    "        print(sum)\n",
+    "\n",
+    "    elif (len(liste2) == cmp and len(liste1) > cmp) :\n",
+    "        while (len(liste1) > cmp) :\n",
+    "            sum += liste1[cmp]\n",
+    "            cmp += 1\n",
+    "        print(sum)\n",
+    "\n",
+    "    else :\n",
+    "        print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact_prod([1,2,3], [1,2,3])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='blue'>EXERCICE 2.4</font>"
+    "## EXERCICE 2.4"
    ]
   },
   {
