--- a/Python.ipynb
+++ b/Python.ipynb
@@ -424,7 +424,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Biggest_Input() -> float :\n",
+    "\n",
+    "    print(\"Entrez les valeurs\")\n",
+    "    liste = []\n",
+    "    FirstInput = int(input(\"entrez le premier nombre : \"))\n",
+    "    liste.append(FirstInput)\n",
+    "    SecondInput = int(input(\"entrez le deuxième nombre : \"))\n",
+    "    liste.append(SecondInput)\n",
+    "    ThirdInput = int(input(\"entrez le troisième nombre : \"))\n",
+    "    liste.append(ThirdInput)\n",
+    "    FourthInput = int(input(\"entrez le quatrième nombre : \"))\n",
+    "    liste.append(FourthInput)\n",
+    "    FifthInput = int(input(\"entrez le cinquième nombre : \"))\n",
+    "    liste.append(FifthInput)\n",
+    "\n",
+    "    cmp = 0\n",
+    "    result = 0\n",
+    "\n",
+    "    while (len(liste) > cmp) :\n",
+    "        if (liste[cmp] > result) :\n",
+    "            result = liste[cmp]\n",
+    "        cmp += 1\n",
+    "\n",
+    "    print(\"Le nombre le plus élevé est : {}\".format(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -432,38 +464,17 @@
      "output_type": "stream",
      "text": [
       "Entrez les valeurs\n",
-      "entrez le premier nombre : 4\n",
-      "entrez le deuxième nombre : 9\n",
-      "entrez le troisième nombre : 7\n",
-      "entrez le quatrième nombre : 20\n",
-      "entrez le cinquième nombre : 12\n",
-      "Le nombre le plus élevé est : 20\n"
+      "entrez le premier nombre : 1\n",
+      "entrez le deuxième nombre : 2\n",
+      "entrez le troisième nombre : 3\n",
+      "entrez le quatrième nombre : 4\n",
+      "entrez le cinquième nombre : 7\n",
+      "Le nombre le plus élevé est : 7\n"
      ]
     }
    ],
    "source": [
-    "print(\"Entrez les valeurs\")\n",
-    "liste = []\n",
-    "FirstInput = int(input(\"entrez le premier nombre : \"))\n",
-    "liste.append(FirstInput)\n",
-    "SecondInput = int(input(\"entrez le deuxième nombre : \"))\n",
-    "liste.append(SecondInput)\n",
-    "ThirdInput = int(input(\"entrez le troisième nombre : \"))\n",
-    "liste.append(ThirdInput)\n",
-    "FourthInput = int(input(\"entrez le quatrième nombre : \"))\n",
-    "liste.append(FourthInput)\n",
-    "FifthInput = int(input(\"entrez le cinquième nombre : \"))\n",
-    "liste.append(FifthInput)\n",
-    "\n",
-    "cmp = 0\n",
-    "result = 0\n",
-    "\n",
-    "while (len(liste) > cmp) :\n",
-    "    if (liste[cmp] > result) :\n",
-    "        result = liste[cmp]\n",
-    "    cmp += 1\n",
-    "    \n",
-    "print(\"Le nombre le plus élevé est : {}\".format(result))"
+    "Biggest_Input()"
    ]
   },
   {
