--- a/Python.ipynb
+++ b/Python.ipynb
@@ -424,39 +424,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Biggest_Input() -> float :\n",
     "\n",
-    "    print(\"Entrez les valeurs\")\n",
     "    liste = []\n",
-    "    FirstInput = int(input(\"entrez le premier nombre : \"))\n",
-    "    liste.append(FirstInput)\n",
-    "    SecondInput = int(input(\"entrez le deuxième nombre : \"))\n",
-    "    liste.append(SecondInput)\n",
-    "    ThirdInput = int(input(\"entrez le troisième nombre : \"))\n",
-    "    liste.append(ThirdInput)\n",
-    "    FourthInput = int(input(\"entrez le quatrième nombre : \"))\n",
-    "    liste.append(FourthInput)\n",
-    "    FifthInput = int(input(\"entrez le cinquième nombre : \"))\n",
-    "    liste.append(FifthInput)\n",
-    "\n",
+    "    cmpWhile = 0\n",
     "    cmp = 0\n",
     "    result = 0\n",
+    "    \n",
+    "    print(\"Entrez les valeurs\")\n",
+    "    \n",
+    "    while cmpWhile != 5 :\n",
+    "        liste.append(int(input(\"entrez un nombre : \")))\n",
+    "        cmpWhile += 1\n",
     "\n",
     "    while (len(liste) > cmp) :\n",
     "        if (liste[cmp] > result) :\n",
     "            result = liste[cmp]\n",
     "        cmp += 1\n",
     "\n",
-    "    print(\"Le nombre le plus élevé est : {}\".format(result))"
+    "    return \"Le nombre le plus élevé est : {}\".format(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -464,13 +459,22 @@
      "output_type": "stream",
      "text": [
       "Entrez les valeurs\n",
-      "entrez le premier nombre : 1\n",
-      "entrez le deuxième nombre : 2\n",
-      "entrez le troisième nombre : 3\n",
-      "entrez le quatrième nombre : 4\n",
-      "entrez le cinquième nombre : 7\n",
-      "Le nombre le plus élevé est : 7\n"
+      "entrez un nombre : 2\n",
+      "entrez un nombre : 3\n",
+      "entrez un nombre : 4\n",
+      "entrez un nombre : 5\n",
+      "entrez un nombre : 9\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Le nombre le plus élevé est : 9'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
