--- a/Python.ipynb
+++ b/Python.ipynb
@@ -530,7 +530,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "198.477px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
@@ -555,10 +560,10 @@
     }
    },
    "position": {
-    "height": "475.35px",
-    "left": "1638px",
+    "height": "475.332px",
+    "left": "1920.98px",
     "right": "20px",
-    "top": "124px",
+    "top": "122.98px",
     "width": "350px"
    },
    "types_to_exclude": [
