--- a/NumpyQuickStart.ipynb
+++ b/NumpyQuickStart.ipynb
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,6 +766,48 @@
    ],
    "source": [
     "type(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6*z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]], dtype=int8)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((2,4), dtype='int8')"
    ]
   },
   {
