--- a/NumpyQuickStart.ipynb
+++ b/NumpyQuickStart.ipynb
@@ -815,7 +815,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.diag(np.array())"
+   ]
   }
  ],
  "metadata": {
