--- a/NumpyExo.ipynb
+++ b/NumpyExo.ipynb
@@ -530,10 +530,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array : \n",
+      " [[0.43935217 0.95272525 0.05596024 0.04594675 0.34049227]\n",
+      " [0.8209832  0.61520601 0.95907035 0.98534299 0.35504797]\n",
+      " [0.17612709 0.81235122 0.0732707  0.80117614 0.38604915]\n",
+      " [0.23617552 0.88805886 0.85718289 0.69194656 0.84789812]\n",
+      " [0.22868452 0.41415145 0.94402106 0.70686163 0.4809407 ]]\n",
+      "\n",
+      " After Modification : \n",
+      " [[0.41878538 0.96527797 0.01065949 0.         0.31354769]\n",
+      " [0.82503678 0.60598418 0.97203241 1.         0.32904242]\n",
+      " [0.13857873 0.81584792 0.02908672 0.80395189 0.3620436 ]\n",
+      " [0.2025011  0.89643973 0.86357183 0.68767553 0.85368808]\n",
+      " [0.19452683 0.39195888 0.95601224 0.70355282 0.46305694]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= np.random.random((5,5))\n",
+    "print(\"original array : \\n {}\".format(x))\n",
+    "xmax, xmin = x.max(), x.min()\n",
+    "x = (x - x.min()) /(x.max() - x.min())\n",
+    "print(\"\\n After Modification : \\n {}\".format(x))"
+   ]
   },
   {
    "cell_type": "markdown",
