--- a/NumpyExo.ipynb
+++ b/NumpyExo.ipynb
@@ -571,10 +571,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non Retourné \n",
+      " [[0.46475096 0.04063119]\n",
+      " [0.94749916 0.66866516]]\n",
+      "\n",
+      " Retourné : \n",
+      " [[0.46475096 0.94749916]\n",
+      " [0.04063119 0.66866516]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.random.rand(2, 2); print(\"Non Retourné \\n {}\".format(M))\n",
+    "print(\"\\n Retourné : \\n {}\".format(np.transpose(M)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -585,10 +602,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "[[0 6 7 9 6]\n",
+      " [6 2 1 8 7]\n",
+      " [4 2 2 7 0]\n",
+      " [4 4 9 8 0]\n",
+      " [7 1 8 6 9]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 6, 7, 3, 6],\n",
+       "       [6, 2, 1, 8, 7],\n",
+       "       [4, 2, 2, 7, 0],\n",
+       "       [4, 4, 9, 8, 0],\n",
+       "       [7, 1, 8, 6, 9]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def \n",
+    "A = np.random.randint(10, size=(5, 5))\n",
+    "print(\"1 \\n{}\".format(A))\n",
+    "\n",
+    "A[np.random.randint(5)][np.random.randint(5)] = np.random.randint(10)\n",
+    "A"
+   ]
   },
   {
    "cell_type": "markdown",
