--- a/Pandas_Merge_Exo.ipynb
+++ b/Pandas_Merge_Exo.ipynb
@@ -18,10 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "Udevice = pd.read_csv(\"csv/user_device.csv\")\n",
+    "Uusage = pd.read_csv(\"csv/user_usage.csv\")\n",
+    "Adevice = pd.read_csv(\"csv/android_devices.csv\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,10 +38,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before change \n",
+      "       Retail Branding Marketing Name       Device                      Model\n",
+      "0                 NaN            NaN       AD681H  Smartfren Andromax AD681H\n",
+      "1                 NaN            NaN        FJL21                      FJL21\n",
+      "2                 NaN            NaN          T31              Panasonic T31\n",
+      "3                 NaN            NaN     hws7721g         MediaPad 7 Youth 2\n",
+      "4                  3Q        OC1020A      OC1020A                    OC1020A\n",
+      "...               ...            ...          ...                        ...\n",
+      "14541           pendo    PNDPP44QC10  PNDPP44QC10                PNDPP44QC10\n",
+      "14542           pendo     PNDPP44QC7   PNDPP44QC7                 PNDPP44QC7\n",
+      "14543      sugar_aums         QPOINT        QPI-1                      QPI-1\n",
+      "14544       tecmobile       OmnisOne     OmnisOne                  Omnis One\n",
+      "14545           ucall          EASY1        EASY1                      EASY1\n",
+      "\n",
+      "[14546 rows x 4 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test</th>\n",
+       "      <th>Marketing Name</th>\n",
+       "      <th>Device</th>\n",
+       "      <th>Model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AD681H</td>\n",
+       "      <td>Smartfren Andromax AD681H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FJL21</td>\n",
+       "      <td>FJL21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T31</td>\n",
+       "      <td>Panasonic T31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>hws7721g</td>\n",
+       "      <td>MediaPad 7 Youth 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3Q</td>\n",
+       "      <td>OC1020A</td>\n",
+       "      <td>OC1020A</td>\n",
+       "      <td>OC1020A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14541</th>\n",
+       "      <td>pendo</td>\n",
+       "      <td>PNDPP44QC10</td>\n",
+       "      <td>PNDPP44QC10</td>\n",
+       "      <td>PNDPP44QC10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14542</th>\n",
+       "      <td>pendo</td>\n",
+       "      <td>PNDPP44QC7</td>\n",
+       "      <td>PNDPP44QC7</td>\n",
+       "      <td>PNDPP44QC7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14543</th>\n",
+       "      <td>sugar_aums</td>\n",
+       "      <td>QPOINT</td>\n",
+       "      <td>QPI-1</td>\n",
+       "      <td>QPI-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14544</th>\n",
+       "      <td>tecmobile</td>\n",
+       "      <td>OmnisOne</td>\n",
+       "      <td>OmnisOne</td>\n",
+       "      <td>Omnis One</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14545</th>\n",
+       "      <td>ucall</td>\n",
+       "      <td>EASY1</td>\n",
+       "      <td>EASY1</td>\n",
+       "      <td>EASY1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14546 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             test Marketing Name       Device                      Model\n",
+       "0             NaN            NaN       AD681H  Smartfren Andromax AD681H\n",
+       "1             NaN            NaN        FJL21                      FJL21\n",
+       "2             NaN            NaN          T31              Panasonic T31\n",
+       "3             NaN            NaN     hws7721g         MediaPad 7 Youth 2\n",
+       "4              3Q        OC1020A      OC1020A                    OC1020A\n",
+       "...           ...            ...          ...                        ...\n",
+       "14541       pendo    PNDPP44QC10  PNDPP44QC10                PNDPP44QC10\n",
+       "14542       pendo     PNDPP44QC7   PNDPP44QC7                 PNDPP44QC7\n",
+       "14543  sugar_aums         QPOINT        QPI-1                      QPI-1\n",
+       "14544   tecmobile       OmnisOne     OmnisOne                  Omnis One\n",
+       "14545       ucall          EASY1        EASY1                      EASY1\n",
+       "\n",
+       "[14546 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"before change \\n {}\".format(Adevice))\n",
+    "\n",
+    "Adevice.rename(columns={\"Retail Branding\": \"test\"})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,16 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -64,6 +218,111 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>outgoing_mins_per_month</th>\n",
+       "      <th>outgoing_sms_per_month</th>\n",
+       "      <th>monthly_mb</th>\n",
+       "      <th>use_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21.97</td>\n",
+       "      <td>4.82</td>\n",
+       "      <td>1557.33</td>\n",
+       "      <td>22787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1710.08</td>\n",
+       "      <td>136.88</td>\n",
+       "      <td>7267.55</td>\n",
+       "      <td>22788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1710.08</td>\n",
+       "      <td>136.88</td>\n",
+       "      <td>7267.55</td>\n",
+       "      <td>22789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>94.46</td>\n",
+       "      <td>35.17</td>\n",
+       "      <td>519.12</td>\n",
+       "      <td>22790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>71.59</td>\n",
+       "      <td>79.26</td>\n",
+       "      <td>1557.33</td>\n",
+       "      <td>22792</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   outgoing_mins_per_month  outgoing_sms_per_month  monthly_mb  use_id\n",
+       "0                    21.97                    4.82     1557.33   22787\n",
+       "1                  1710.08                  136.88     7267.55   22788\n",
+       "2                  1710.08                  136.88     7267.55   22789\n",
+       "3                    94.46                   35.17      519.12   22790\n",
+       "4                    71.59                   79.26     1557.33   22792"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Uusage.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -135,16 +394,18 @@
        "4   22786    28239  android               6.0  ONE E1003            1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Udevice.head(5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -153,6 +414,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -264,12 +538,14 @@
        "9         AG_Go_Tab_Access_2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Adevice.head(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1722,6 +1998,13 @@
      "varRefreshCmd": "cat(var_dic_list()) "
     }
    },
+   "position": {
+    "height": "373.212px",
+    "left": "1703.33px",
+    "right": "20px",
+    "top": "120px",
+    "width": "350px"
+   },
    "types_to_exclude": [
     "module",
     "function",
@@ -1729,7 +2012,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
