--- a/Pandas_Merge_Exo.ipynb
+++ b/Pandas_Merge_Exo.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -565,6 +565,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -573,8 +586,11 @@
        "      <th>outgoing_sms_per_month</th>\n",
        "      <th>monthly_mb</th>\n",
        "      <th>use_id</th>\n",
+       "      <th>user_id</th>\n",
        "      <th>platform</th>\n",
+       "      <th>platform_version</th>\n",
        "      <th>device</th>\n",
+       "      <th>use_type_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -584,8 +600,11 @@
        "      <td>4.82</td>\n",
        "      <td>1557.33</td>\n",
        "      <td>22787</td>\n",
+       "      <td>12921</td>\n",
        "      <td>android</td>\n",
+       "      <td>4.3</td>\n",
        "      <td>GT-I9505</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -593,8 +612,11 @@
        "      <td>136.88</td>\n",
        "      <td>7267.55</td>\n",
        "      <td>22788</td>\n",
+       "      <td>28714</td>\n",
        "      <td>android</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>SM-G930F</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -602,8 +624,11 @@
        "      <td>136.88</td>\n",
        "      <td>7267.55</td>\n",
        "      <td>22789</td>\n",
+       "      <td>28714</td>\n",
        "      <td>android</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>SM-G930F</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -611,8 +636,11 @@
        "      <td>35.17</td>\n",
        "      <td>519.12</td>\n",
        "      <td>22790</td>\n",
+       "      <td>29592</td>\n",
        "      <td>android</td>\n",
+       "      <td>5.1</td>\n",
        "      <td>D2303</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -620,35 +648,127 @@
        "      <td>79.26</td>\n",
        "      <td>1557.33</td>\n",
        "      <td>22792</td>\n",
+       "      <td>28217</td>\n",
        "      <td>android</td>\n",
+       "      <td>5.1</td>\n",
        "      <td>SM-G361F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>198.59</td>\n",
+       "      <td>90.49</td>\n",
+       "      <td>5191.12</td>\n",
+       "      <td>23043</td>\n",
+       "      <td>28953</td>\n",
+       "      <td>android</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>SM-G900F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>198.59</td>\n",
+       "      <td>90.49</td>\n",
+       "      <td>3114.67</td>\n",
+       "      <td>23044</td>\n",
+       "      <td>28953</td>\n",
+       "      <td>android</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>SM-G900F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>106.65</td>\n",
+       "      <td>82.13</td>\n",
+       "      <td>5191.12</td>\n",
+       "      <td>23046</td>\n",
+       "      <td>29454</td>\n",
+       "      <td>android</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Moto G (4)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>344.53</td>\n",
+       "      <td>20.53</td>\n",
+       "      <td>519.12</td>\n",
+       "      <td>23049</td>\n",
+       "      <td>29725</td>\n",
+       "      <td>android</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>SM-G900F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>42.75</td>\n",
+       "      <td>46.83</td>\n",
+       "      <td>5191.12</td>\n",
+       "      <td>23053</td>\n",
+       "      <td>20257</td>\n",
+       "      <td>android</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>Vodafone Smart ultra 6</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>159 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   outgoing_mins_per_month  outgoing_sms_per_month  monthly_mb  use_id  \\\n",
-       "0                    21.97                    4.82     1557.33   22787   \n",
-       "1                  1710.08                  136.88     7267.55   22788   \n",
-       "2                  1710.08                  136.88     7267.55   22789   \n",
-       "3                    94.46                   35.17      519.12   22790   \n",
-       "4                    71.59                   79.26     1557.33   22792   \n",
+       "     outgoing_mins_per_month  outgoing_sms_per_month  monthly_mb  use_id  \\\n",
+       "0                      21.97                    4.82     1557.33   22787   \n",
+       "1                    1710.08                  136.88     7267.55   22788   \n",
+       "2                    1710.08                  136.88     7267.55   22789   \n",
+       "3                      94.46                   35.17      519.12   22790   \n",
+       "4                      71.59                   79.26     1557.33   22792   \n",
+       "..                       ...                     ...         ...     ...   \n",
+       "154                   198.59                   90.49     5191.12   23043   \n",
+       "155                   198.59                   90.49     3114.67   23044   \n",
+       "156                   106.65                   82.13     5191.12   23046   \n",
+       "157                   344.53                   20.53      519.12   23049   \n",
+       "158                    42.75                   46.83     5191.12   23053   \n",
        "\n",
-       "  platform    device  \n",
-       "0  android  GT-I9505  \n",
-       "1  android  SM-G930F  \n",
-       "2  android  SM-G930F  \n",
-       "3  android     D2303  \n",
-       "4  android  SM-G361F  "
+       "     user_id platform  platform_version                  device  use_type_id  \n",
+       "0      12921  android               4.3                GT-I9505            1  \n",
+       "1      28714  android               6.0                SM-G930F            1  \n",
+       "2      28714  android               6.0                SM-G930F            1  \n",
+       "3      29592  android               5.1                   D2303            1  \n",
+       "4      28217  android               5.1                SM-G361F            1  \n",
+       "..       ...      ...               ...                     ...          ...  \n",
+       "154    28953  android               6.0                SM-G900F            1  \n",
+       "155    28953  android               6.0                SM-G900F            1  \n",
+       "156    29454  android               6.0              Moto G (4)            1  \n",
+       "157    29725  android               6.0                SM-G900F            1  \n",
+       "158    20257  android               5.1  Vodafone Smart ultra 6            1  \n",
+       "\n",
+       "[159 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Uusage.merge(Udevice"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1999,10 +2119,10 @@
     }
    },
    "position": {
-    "height": "373.212px",
-    "left": "1703.33px",
+    "height": "40.9896px",
+    "left": "680.767px",
     "right": "20px",
-    "top": "120px",
+    "top": "2.99653px",
     "width": "350px"
    },
    "types_to_exclude": [
